changed from gumiho to mudang

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@ body {
     background-color: lightgray;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
+
 
 h1 {
     color: darkslateblue;
@@ -10,14 +16,15 @@ h1 {
     background-color: orange;
 }
 
-.header-nav {
+/* .header-nav {
     display: flex;
     justify-content: center;
-}
+} */
 
 header img {
-    width: 50%;
+    width: 90%;
     margin: 10px;
+    border-radius: 20px;
 }
 
 p {
@@ -45,9 +52,22 @@ nav ul {
 nav ul li {
     background-color: orange;
     padding: 10px;
+    margin: 25px;
 }
 
 nav ul li a {
     text-decoration: none;
     background-color: rgb(174, 112, 112);
+}
+
+@media (min-width:1200px) {
+    .header-nav {
+        display: flex;
+        justify-content: center;
+    }
+
+    header img {
+        width: 50%;
+        margin: 10px;
+    }
 }
